Fix whitespace preservation issues

--- a/static/css/view-project/main.css
+++ b/static/css/view-project/main.css
@@ -44,6 +44,7 @@ h2.padded {
   margin-top: 1em;
   margin-right: 2.5em;
   font-size: 1.05rem;
+  white-space: pre-line;
 }
 
 .project-header .labeled .secondary {
