--- a/static/css/view-project/src/activity-moderated.scss
+++ b/static/css/view-project/src/activity-moderated.scss
@@ -102,7 +102,8 @@
     text-decoration: underline;
   }
 
-  .left .description {
+  .left .description,
+  .with-icon .text {
     white-space: pre-line;
   }
 }
