--- a/static/css/view-project/src/activity-user.scss
+++ b/static/css/view-project/src/activity-user.scss
@@ -79,6 +79,7 @@
 
       .with-icon {
         margin-top: .5em;
+        white-space: pre-line;
       }
     }
 
